@@ -1,4 +1,4 @@
-package net.literally.chunk.loader.GUI.handler;
+package net.literally.chunk.loader.gui.handler;
 
 import io.github.cottonmc.cotton.gui.SyncedGuiDescription;
 import io.github.cottonmc.cotton.gui.widget.WButton;
@@ -8,32 +8,37 @@ import io.github.cottonmc.cotton.gui.widget.WToggleButton;
 import io.github.cottonmc.cotton.gui.widget.data.HorizontalAlignment;
 import io.github.cottonmc.cotton.gui.widget.data.Insets;
 import io.github.cottonmc.cotton.gui.widget.data.VerticalAlignment;
-import net.literally.chunk.loader.data.LclData;
+import net.fabricmc.fabric.api.client.networking.v1.ClientPlayNetworking;
+import net.literally.chunk.loader.data.LCLData;
 import net.literally.chunk.loader.data.SerializableChunkPos;
-import net.literally.chunk.loader.entity.ChunkLoaderBlockEntity;
 import net.literally.chunk.loader.initializer.LCLBlocks;
 import net.literally.chunk.loader.initializer.LCLGUIHandlers;
-import net.literally.chunk.loader.network.packets.packet.ForcedChunksUpdatePacket;
+import net.literally.chunk.loader.network.packets.packet.ForcedChunksUpdatePacketPayload;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.entity.player.PlayerInventory;
 import net.minecraft.screen.ScreenHandlerContext;
 import net.minecraft.text.Text;
 import net.minecraft.util.Identifier;
+import net.minecraft.util.math.BlockPos;
 
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
 
 public class ChunkLoaderGUIHandler extends SyncedGuiDescription {
-    ChunkLoaderBlockEntity loaderEntity;
+    //ChunkLoaderBlockEntity loaderEntity;
+    BlockPos pos;
     WToggleButton[][] buttonsMatrix;
     SerializableChunkPos centre;
     ScreenHandlerContext context;
 
-    public ChunkLoaderGUIHandler(int syncId, PlayerInventory playerInventory, ScreenHandlerContext context) {
+    public ChunkLoaderGUIHandler(int syncId, PlayerInventory playerInventory, ScreenHandlerContext context, BlockPos pos) {
         super(LCLGUIHandlers.CHUNK_LOADER_SCREEN_HANDLER, syncId, playerInventory, getBlockInventory(context), null);
         this.context = context;
-        context.run((world, pos) -> loaderEntity = (ChunkLoaderBlockEntity) world.getBlockEntity(pos));
 
-        centre = new SerializableChunkPos(loaderEntity.getPos(), world.getRegistryKey().getValue().getPath());
+        this.pos = pos;
+
+        centre = new SerializableChunkPos(pos, world.getRegistryKey().getValue().getPath());
         WPlainPanel root = new WPlainPanel();
         root.setSize(128, 140);
         root.setInsets(Insets.ROOT_PANEL);
@@ -42,25 +47,25 @@ public class ChunkLoaderGUIHandler extends SyncedGuiDescription {
         WButton selectAll = new WButton(Text.of("All"));
         selectAll.setOnClick(() -> {
             ArrayList<SerializableChunkPos> data = new ArrayList<>();
-            for (int i = 0; i < LclData.SIZE; i++) {
-                for (int j = 0; j < LclData.SIZE; j++) {
+            for (int i = 0; i < LCLData.SIZE; i++) {
+                for (int j = 0; j < LCLData.SIZE; j++) {
                     data.add(centre.getChunkAtRelativeOffset(i, j));
                 }
             }
-            ForcedChunksUpdatePacket pack = new ForcedChunksUpdatePacket(loaderEntity.getPos(), true, data);
-            pack.sendToServer();
+            ForcedChunksUpdatePacketPayload pack = new ForcedChunksUpdatePacketPayload(pos.getX(), pos.getZ(), true, data);
+            ClientPlayNetworking.send(pack);
         });
 
         WButton selectNone = new WButton(Text.of("None"));
         selectNone.setOnClick(() -> {
             ArrayList<SerializableChunkPos> data = new ArrayList<>();
-            for (int i = 0; i < LclData.SIZE; i++) {
-                for (int j = 0; j < LclData.SIZE; j++) {
+            for (int i = 0; i < LCLData.SIZE; i++) {
+                for (int j = 0; j < LCLData.SIZE; j++) {
                     data.add(centre.getChunkAtRelativeOffset(i, j));
                 }
             }
-            ForcedChunksUpdatePacket pack = new ForcedChunksUpdatePacket(loaderEntity.getPos(), false, data);
-            pack.sendToServer();
+            ForcedChunksUpdatePacketPayload pack = new ForcedChunksUpdatePacketPayload(pos.getX(), pos.getZ(), false, data);
+            ClientPlayNetworking.send(pack);
         });
 
         root.add(selectAll, 16, 128, 40, 24);
@@ -73,20 +78,20 @@ public class ChunkLoaderGUIHandler extends SyncedGuiDescription {
         return canUse(context, entity, LCLBlocks.CHUNK_LOADER_BLOCK);
     }
 
-    public void refreshGUI(ForcedChunksUpdatePacket payload) {
-        ArrayList<SerializableChunkPos> chunks = payload.getChunksPos();
-        if (chunks.size() > 0) {
-            if (!chunks.get(0).getDimension().equals(centre.getDimension())) {
-                System.out.println("Not calculating, other dim");
+    public void refreshGUI(ForcedChunksUpdatePacketPayload payload) {
+        List<SerializableChunkPos> chunks = payload.getChunksPos();
+        if (!chunks.isEmpty()) {
+            if (!chunks.getFirst().getDimension().equals(centre.getDimension())) {
+                System.out.println("not calculating, other dim");
                 return;
             }
             SerializableChunkPos updateCentre = new SerializableChunkPos(payload.getX(), payload.getZ(), centre.getDimension());
-            if (centre.distanceFrom(updateCentre) > LclData.SIZE * 1.5D) {
-                System.out.println("Not calculating too far");
+            if (centre.distanceFrom(updateCentre) > LCLData.SIZE * 1.5D) {
+                System.out.println("not calculating too far");
                 return;
             }
-            for (int i = 0; i < LclData.SIZE; i++) {
-                for (int j = 0; j < LclData.SIZE; j++) {
+            for (int i = 0; i < LCLData.SIZE; i++) {
+                for (int j = 0; j < LCLData.SIZE; j++) {
                     if (chunks.contains(centre.getChunkAtRelativeOffset(i, j))) {
                         buttonsMatrix[i][j].setToggle(payload.isState());
                     }
@@ -109,17 +114,17 @@ public class ChunkLoaderGUIHandler extends SyncedGuiDescription {
         west.setHorizontalAlignment(HorizontalAlignment.CENTER);
         west.setVerticalAlignment(VerticalAlignment.CENTER);
 
-        buttonsMatrix = new WToggleButton[LclData.SIZE][LclData.SIZE];
-        for (int i = 0; i < LclData.SIZE; i++) {
+        buttonsMatrix = new WToggleButton[LCLData.SIZE][LCLData.SIZE];
+        for (int i = 0; i < LCLData.SIZE; i++) {
             int posX = (19 * i + 16);
-            for (int j = 0; j < LclData.SIZE; j++) {
+            for (int j = 0; j < LCLData.SIZE; j++) {
                 WToggleButton curr = new WToggleButton(new Identifier("lchunkloader:textures/gui/loaded.png"), new Identifier("lchunkloader:textures/gui/not_loaded.png"));
                 int finalI = i;
                 int finalJ = j;
                 //System.out.println(i+", "+j);
-                curr.setOnToggle((on) -> {
-                    ForcedChunksUpdatePacket pack = new ForcedChunksUpdatePacket(loaderEntity.getPos(), on, centre.getChunkAtRelativeOffset(finalI, finalJ));
-                    pack.sendToServer();
+                curr.setOnToggle((state) -> {
+                    ForcedChunksUpdatePacketPayload pack = new ForcedChunksUpdatePacketPayload(pos.getX(), pos.getZ(), state, Collections.singletonList(centre.getChunkAtRelativeOffset(finalI, finalJ)));
+                    ClientPlayNetworking.send(pack);
                 });
                 int posY = 19 * j + 16;
                 root.add(curr, posX, posY, 16, 16);
